syntax = "proto3";

service DIDAWorkerService {
  rpc livenessCheck(LivenessCheckRequest) returns (LivenessCheckReply);
}

message LivenessCheckRequest {}

message LivenessCheckReply {
  bool ok = 1;
}
